<resources>
    <string name="app_name">Exec1_pam</string>
    <string name="Registrasi">Registrasi</string>
    <string name="hasiltask">Hasil Task</string>
    <string name="welcome">Welcome in Todo App</string>
    <string name="txnama">Nama</string>
    <string name="lednama">Masukkan Nama</string>
    <string name="txpassword">Password</string>
    <string name="ledPassword">Masukkan Password</string>
    <string name="bsignin">Sign-In</string>
    <string name="newto">New to Todo App ?</string>
    <string name="bregister">Register</string>
    <string name="txregister">Register</string>
    <string name="rtxnama">Nama</string>
    <string name="rednama">Masukkan Nama</string>
    <string name="rtxemail">Email</string>
    <string name="redemail">Masukkan Email</string>
    <string name="rtxpassword">password</string>
    <string name="redpassword">Masukkan Password</string>
    <string name="repass">Re-Password</string>
    <string name="rerepass">Masukkan Password</string>
    <string name="signup">Sign-Up</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="namalogin">Pascal</string>
    <string name="judultask">Task</string>
    <string name="task">Task</string>
    <string name="tednatask">Masukkan Task</string>
    <string name="jenistask">Jenis Task</string>
    <string name="edjenistask">Masukkan Jenis Task</string>
    <string name="timetask">Time Task</string>
    <string name="edtimetask">Masukkan Lama Task</string>
    <string name="fab">FAB</string>
    <string name="hnamatask">Hasil Nama Task</string>
    <string name="hjenistask">Hasil Jenis Task</string>
    <string name="htimetask">Hasil Time Task</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
</resources>