<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/todo_icon" />

    <TextView
        android:id="@+id/editwelcome"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/welcome"
        android:textColor="@color/teal_700"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/tnama"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:text="@string/txnama"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editwelcome"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/lednama"
        android:layout_width="303dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/lednama"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tnama"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tpassword"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txpassword"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lednama"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/ledpassword"
        android:layout_width="303dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/ledPassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tpassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bsignin"
        android:layout_width="303dp"
        android:layout_height="56dp"
        android:text="@string/bsignin"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ledpassword"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/newto"
        android:layout_width="162dp"
        android:layout_height="28dp"
        android:text="@string/newto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsignin"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toEndOf="@+id/newto"
        app:layout_constraintTop_toBottomOf="@+id/bsignin"
        app:layout_constraintVertical_bias="0.339" />

</androidx.constraintlayout.widget.ConstraintLayout>